ana sayfa düzenlendi

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
   <!-- ALT KISIM -->
   <footer>
-    <p>&copy; 2025 Dünya Kaşifi. Tüm hakları saklıdır.</p>
+    <p>&copy; 2025 Dünya Kaşifi.</p>
   </footer>
 </body>
 </html>
