index dosyası düzenlendi

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li><a href="about.html">Proje</a></li>
         <li><a href="reports.html">Raporlar</a></li>
         <li><a href="usecase.html">Diyagramlar</a></li>
-        <li><a href="games.html">Mini Oyunlar</a></li>
+        <li><a href="profile.html">Kaşif profili</a></li>
         <li><a href="contact.html">İletişim</a></li>
       </ul>
     </nav>
