--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <ul>
         <li><a href="index.html" class="active">Ana Sayfa</a></li>
         <li><a href="about.html">Proje</a></li>
-        <li><a href="reports.html">Raporlar</a></li>
+        <li><a href="games.html">mini oyunlar</a></li>
         <li><a href="usecase.html">Diyagramlar</a></li>
         <li><a href="profile.html">Kaşif profili</a></li>
         <li><a href="contact.html">İletişim</a></li>
