--- a/games.html
+++ b/games.html
@@ -97,7 +97,17 @@
       <a href="balloon.html">
         <button class="play-button">Oyna</button>
       </a>
+      
     </div>
+    <div class="game-card">
+        <div class="game-image"></div>
+        <div class="game-title">🎈 Bayrak Eşleştirme</div>
+        <div class="game-description">Ülkelerin bayraklarını eşlşetir !</div>
+        <a href="flag-match.html">
+          <button class="play-button">Oyna</button>
+        </a>
+        
+      </div>
 
     <!-- Buraya yeni oyun kartları eklenecek -->
     <!-- Örnek:
