Matematik yarışı Mini Oyunlar sayfası eklendi

--- a/games.html
+++ b/games.html
@@ -108,6 +108,15 @@
         </a>
         
       </div>
+      <div class="game-card">
+        <div class="game-image"></div>
+        <div class="game-title">🎈 Bayrak Eşleştirme</div>
+        <div class="game-description">Ülkelerin bayraklarını eşlşetir !</div>
+        <a href="matematik_yarısı.html">
+          <button class="play-button">Oyna</button>
+        </a>
+        
+      </div>
 
     <!-- Buraya yeni oyun kartları eklenecek -->
     <!-- Örnek:
