Matematik yarışı Mini Oyunlar sayfası eklendi

--- a/games.html
+++ b/games.html
@@ -110,8 +110,8 @@
       </div>
       <div class="game-card">
         <div class="game-image"></div>
-        <div class="game-title">🎈 Bayrak Eşleştirme</div>
-        <div class="game-description">Ülkelerin bayraklarını eşlşetir !</div>
+        <div class="game-title">🎈 Matemetik Yarışı </div>
+        <div class="game-description">Matematik sorularını çöz!</div>
         <a href="matematik_yarısı.html">
           <button class="play-button">Oyna</button>
         </a>
