Kelime Bulmaca Oyunu eklendi

--- a/games.html
+++ b/games.html
@@ -117,6 +117,15 @@
         </a>
         
       </div>
+      <div class="game-card">
+        <div class="game-image"></div>
+        <div class="game-title">🎈 Kelime Bulmaca Oynu  </div>
+        <div class="game-description">Kelimeleri doğru tahmin et!</div>
+        <a href="matematik_yarısı.html">
+          <button class="play-button">Oyna</button>
+        </a>
+        
+      </div>
 
     <!-- Buraya yeni oyun kartları eklenecek -->
     <!-- Örnek:
