Kelime Bulmaca Oyunu düzenlendi

--- a/games.html
+++ b/games.html
@@ -121,7 +121,7 @@
         <div class="game-image"></div>
         <div class="game-title">🎈 Kelime Bulmaca Oynu  </div>
         <div class="game-description">Kelimeleri doğru tahmin et!</div>
-        <a href="matematik_yarısı.html">
+        <a href="kelimebulmaca.html">
           <button class="play-button">Oyna</button>
         </a>
         
