--- a/kelimebulmaca.html
+++ b/kelimebulmaca.html
@@ -7,170 +7,123 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f8ff;
             text-align: center;
+            background-color: #f2f2f2;
+        }
+        .game-container {
+            width: 80%;
+            margin: 50px auto;
+            background-color: white;
             padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
-
-        header h1 {
-            font-size: 36px;
-            color: #00bfff;
+        h1 {
+            color: #333;
         }
-
-        button {
-            background-color: #ff6347;
-            color: white;
-            padding: 15px 25px;
-            margin: 10px;
-            border: none;
-            font-size: 18px;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background-color: #ff4500;
-        }
-
-        #lettersContainer {
+        .words {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
+            margin: 20px 0;
         }
-
-        .letterCard {
-            background-color: #f0e68c;
-            padding: 20px;
+        .word {
+            font-size: 20px;
+            padding: 10px 15px;
+            background-color: #4CAF50;
+            color: white;
+            border-radius: 5px;
             margin: 5px;
-            font-size: 24px;
-            border-radius: 10px;
             cursor: pointer;
         }
-
-        #gameBoard {
-            margin-top: 20px;
+        .word:hover {
+            background-color: #45a049;
         }
-
-        #score {
-            font-size: 24px;
-            margin-top: 20px;
+        .message {
+            margin: 20px;
+            font-size: 18px;
+            color: #333;
         }
-
-        #endScreen {
-            display: none;
+        #start-btn {
+            padding: 15px 30px;
+            font-size: 18px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        #start-btn:hover {
+            background-color: #45a049;
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>Kelime Bulmaca</h1>
-        <p>Kelimeyi bulmaya çalış!</p>
-    </header>
-
-    <section id="menu">
-        <button id="startBtn">Başlat</button>
-        <button id="instructionsBtn">Nasıl Oynanır?</button>
-    </section>
-
-    <section id="game" style="display:none;">
-        <div id="categorySelector">
-            <h3>Bir kategori seçin:</h3>
-            <button class="categoryBtn">Hayvanlar</button>
-            <button class="categoryBtn">Renkler</button>
-            <button class="categoryBtn">Yiyecekler</button>
+    <div class="game-container">
+        <h1>Kelime Bulmaca Oyunu</h1>
+        <button id="start-btn">Başla</button>
+        <div id="game" style="display:none;">
+            <div class="words" id="words"></div>
+            <div class="message" id="message"></div>
         </div>
-
-        <div id="gameBoard" style="display:none;">
-            <p id="wordToGuess"></p>
-            <div id="lettersContainer"></div>
-            <button id="hintBtn">İpucu</button>
-            <div id="score">Puan: 0</div>
-        </div>
-    </section>
-
-    <section id="endScreen" style="display:none;">
-        <h2>Tebrikler!</h2>
-        <p>Oyun Bitti, Puanınız: <span id="finalScore"></span></p>
-        <button id="playAgainBtn">Tekrar Oyna</button>
-    </section>
+    </div>
 
     <script>
-        let words = {
-            "Hayvanlar": ["kedi", "köpek", "kuş", "balina", "kaplan"],
-            "Renkler": ["kırmızı", "mavi", "yeşil", "sarı", "turuncu"],
-            "Yiyecekler": ["elma", "muz", "karpuz", "patates", "domates"]
-        };
+        const startBtn = document.getElementById('start-btn');
+        const gameDiv = document.getElementById('game');
+        const wordsContainer = document.getElementById('words');
+        const messageDiv = document.getElementById('message');
 
-        let selectedCategory = "";
-        let currentWord = "";
-        let score = 0;
-        let currentHint = 0;
+        const words = [
+            'bilgisayar', 'telefon', 'kitap', 'masa', 'yazılım', 
+            'internet', 'televizyon', 'film', 'video', 'oyun'
+        ];
 
-        document.getElementById("startBtn").addEventListener("click", startGame);
-        document.getElementById("instructionsBtn").addEventListener("click", showInstructions);
+        let selectedWord = '';
+        let wordElements = [];
 
+        // Oyunu başlat
+        startBtn.addEventListener('click', () => {
+            startBtn.style.display = 'none'; // Başla butonunu gizle
+            gameDiv.style.display = 'block'; // Oyun alanını göster
+            startGame();
+        });
+
+        // Oyun başlatma fonksiyonu
         function startGame() {
-            document.getElementById("menu").style.display = "none";
-            document.getElementById("categorySelector").style.display = "block";
-        }
-
-        document.querySelectorAll(".categoryBtn").forEach(btn => {
-            btn.addEventListener("click", selectCategory);
-        });
-
-        function selectCategory(e) {
-            selectedCategory = e.target.innerText;
-            document.getElementById("categorySelector").style.display = "none";
-            startNewRound();
-        }
-
-        function startNewRound() {
-            let wordArray = words[selectedCategory];
-            currentWord = wordArray[Math.floor(Math.random() * wordArray.length)];
-            displayWord(currentWord);
-        }
-
-        function displayWord(word) {
-            let wordToGuess = document.getElementById("wordToGuess");
-            wordToGuess.innerHTML = word.split('').map(letter => `<span class="letterCard">${letter}</span>`).join('');
-            displayLetters(word);
-        }
-
-        function displayLetters(word) {
-            let lettersContainer = document.getElementById("lettersContainer");
-            lettersContainer.innerHTML = "";
-            word.split('').forEach(letter => {
-                let letterCard = document.createElement("div");
-                letterCard.className = "letterCard";
-                letterCard.textContent = letter;
-                lettersContainer.appendChild(letterCard);
-                letterCard.addEventListener("click", letterClicked);
+            selectedWord = words[Math.floor(Math.random() * words.length)]; // Rastgele kelime seç
+            wordElements = selectedWord.split('').map(letter => {
+                const wordElement = document.createElement('div');
+                wordElement.classList.add('word');
+                wordElement.textContent = letter;
+                wordElement.addEventListener('click', () => handleLetterClick(wordElement));
+                wordsContainer.appendChild(wordElement);
+                return wordElement;
             });
+            messageDiv.textContent = 'Kelimeyi bulmaya çalışın!';
         }
 
-        function letterClicked(e) {
-            e.target.style.backgroundColor = "#32CD32";
-            score += 10;
-            document.getElementById("score").textContent = "Puan: " + score;
-            if (score >= currentWord.length * 10) {
-                showEndScreen();
+        // Harf tıklama işlevi
+        function handleLetterClick(element) {
+            element.style.backgroundColor = '#2196F3';
+            element.style.color = '#fff';
+            element.style.pointerEvents = 'none';
+
+            checkWordCompletion();
+        }
+
+        // Kelimenin tamamlanıp tamamlanmadığını kontrol et
+        function checkWordCompletion() {
+            const remainingWords = wordElements.filter(word => word.style.backgroundColor !== 'rgb(33, 150, 243)');
+            
+            if (remainingWords.length === 0) {
+                messageDiv.textContent = `Tebrikler, kelimeyi buldunuz: ${selectedWord}`;
+                setTimeout(() => {
+                    messageDiv.textContent = '';
+                    wordsContainer.innerHTML = '';
+                    startBtn.style.display = 'inline-block'; // Yeni oyun başlatılabilir
+                }, 2000);
             }
-        }
-
-        function showEndScreen() {
-            document.getElementById("game").style.display = "none";
-            document.getElementById("endScreen").style.display = "block";
-            document.getElementById("finalScore").textContent = score;
-        }
-
-        document.getElementById("playAgainBtn").addEventListener("click", () => {
-            document.getElementById("endScreen").style.display = "none";
-            document.getElementById("menu").style.display = "block";
-            score = 0;
-            document.getElementById("score").textContent = "Puan: " + score;
-        });
-
-        function showInstructions() {
-            alert("Oyun kuralları:\nKelimeyi bulmak için verilen harfleri kullanın.");
         }
     </script>
 </body>
