--- a/flag-match.html
+++ b/flag-match.html
@@ -1,125 +1,290 @@
 <!DOCTYPE html>
 <html lang="tr">
+
 <head>
-  <meta charset="UTF-8" />
-  <title>Bayrak Eşleştirme Oyunu</title>
-  <style>
-    body {
-      font-family: "Comic Sans MS", cursive, sans-serif;
-      background: linear-gradient(to right, #c2e9fb, #a1c4fd);
-      text-align: center;
-      padding: 20px;
-    }
+    <meta charset="UTF-8" />
+    <title>Bayrak Eşleştirme Oyunu</title>
+    <style>
+        body {
+            font-family: "Comic Sans MS", cursive, sans-serif;
+            text-align: center;
+            padding: 20px;
+            transition: background-color 1s ease;
+            background-color: #f7f7f7;
+            margin: 0;
+        }
 
-    h1 {
-      margin-bottom: 20px;
-      color: #333;
-    }
+        h1 {
+            margin-bottom: 20px;
+            color: #333;
+        }
 
-    #game {
-      display: flex;
-      flex-wrap: wrap;
-      max-width: 600px;
-      margin: auto;
-      gap: 15px;
-      justify-content: center;
-    }
+        #levelSelection {
+            margin-bottom: 20px;
+        }
 
-    .card {
-      width: 120px;
-      height: 120px;
-      background-color: #fff;
-      border-radius: 12px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 24px;
-      cursor: pointer;
-      transition: transform 0.2s;
-      user-select: none;
-    }
+        button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+            font-size: 16px;
+            margin: 5px;
+            transition: background-color 0.3s;
+        }
 
-    .card.matched {
-      background-color: #d4edda;
-      color: #155724;
-      cursor: default;
-    }
+        /* Kolay Seviye Rengi */
+        .easy button {
+            background-color: #ff7e5f;
+        }
 
-    .card:hover {
-      transform: scale(1.05);
-    }
-  </style>
+        .easy button:hover {
+            background-color: #feb47b;
+        }
+
+        /* Orta Seviye Rengi */
+        .medium button {
+            background-color: #4ca1af;
+        }
+
+        .medium button:hover {
+            background-color: #c4e0e5;
+        }
+
+        /* Zor Seviye Rengi */
+        .hard button {
+            background-color: #2c3e50;
+        }
+
+        .hard button:hover {
+            background-color: #34495e;
+        }
+
+        /* Kolay Seviye Alanı */
+        .easy #game {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 15px;
+            justify-content: center;
+            margin-top: 20px;
+            max-width: 500px;
+            margin: auto;
+        }
+
+        /* Orta Seviye Alanı */
+        .medium #game {
+            display: grid;
+            grid-template-columns: repeat(6, 1fr);
+            gap: 15px;
+            justify-content: center;
+            margin-top: 20px;
+            max-width: 700px;
+            margin: auto;
+        }
+
+        /* Zor Seviye Alanı */
+        .hard #game {
+            display: grid;
+            grid-template-columns: repeat(8, 1fr);
+            gap: 15px;
+            justify-content: center;
+            margin-top: 20px;
+            max-width: 900px;
+            margin: auto;
+        }
+
+        .card {
+            width: 120px;
+            height: 120px;
+            background-color: #fff;
+            border-radius: 12px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 24px;
+            cursor: pointer;
+            transition: transform 0.2s;
+            user-select: none;
+        }
+
+        .card.matched {
+            cursor: default;
+        }
+
+        .card:hover {
+            transform: scale(1.05);
+        }
+
+        .easy {
+            background: linear-gradient(to right, #ff7e5f, #feb47b); /* Yaz teması */
+        }
+
+        .medium {
+            background: linear-gradient(to right, #4ca1af, #c4e0e5); /* Kış teması */
+        }
+
+        .hard {
+            background: linear-gradient(to right, #2c3e50, #34495e); /* Koyu tema */
+        }
+
+        /* Kutlama Animasyonu */
+        @keyframes celebration {
+            0% {
+                transform: scale(1);
+                opacity: 1;
+            }
+            50% {
+                transform: scale(1.2);
+                opacity: 0.8;
+            }
+            100% {
+                transform: scale(1);
+                opacity: 1;
+            }
+        }
+
+        .celebration {
+            animation: celebration 1s ease-out forwards;
+        }
+
+        /* Kolay Seviye Eşleşen Kart Rengi */
+        .easy .card.matched {
+            background-color: #d4edda; /* Yeşil renk */
+            color: #155724;
+        }
+
+        /* Orta Seviye Eşleşen Kart Rengi */
+        .medium .card.matched {
+            background-color: #fff3cd; /* Sarı renk */
+            color: #856404;
+        }
+
+        /* Zor Seviye Eşleşen Kart Rengi */
+        .hard .card.matched {
+            background-color: #cce5ff; /* Mavi renk */
+            color: #004085;
+        }
+    </style>
 </head>
+
 <body>
-  <h1>🌍 Bayrak Eşleştirme Oyunu</h1>
-  <div id="game"></div>
+    <h1>🌍 Bayrak Eşleştirme Oyunu</h1>
+    <div id="levelSelection">
+        <button class="easy" onclick="startGame(3)">Kolay</button>
+        <button class="medium" onclick="startGame(4)">Orta</button>
+        <button class="hard" onclick="startGame(5)">Zor</button>
+    </div>
+    <div id="game"></div>
 
-  <script>
-    const pairs = [
-      { id: "🇹🇷", match: "Türkiye" },
-      { id: "🇫🇷", match: "Fransa" },
-      { id: "🇯🇵", match: "Japonya" },
-      { id: "🇧🇷", match: "Brezilya" },
-      { id: "🇺🇸", match: "Amerika" },
-      { id: "🇩🇪", match: "Almanya" }
-    ];
+    <script>
+        const allPairs = [
+            { id: "🇹🇷", match: "Türkiye" },
+            { id: "🇫🇷", match: "Fransa" },
+            { id: "🇯🇵", match: "Japonya" },
+            { id: "🇧🇷", match: "Brezilya" },
+            { id: "🇺🇸", match: "Amerika" },
+            { id: "🇩🇪", match: "Almanya" },
+            { id: "🇮🇹", match: "İtalya" },
+            { id: "🇮🇳", match: "Hindistan" },
+            { id: "🇨🇦", match: "Kanada" },
+            { id: "🇷🇺", match: "Rusya" },
+            { id: "🇨🇳", match: "Çin" },
+            { id: "🇪🇸", match: "İspanya" }
+        ];
 
-    let cards = [];
+        let cards = [];
+        let selected = [];
+        let matchedCount = 0;
+        let gameBoard = document.getElementById("game");
+        let currentTheme = "";
 
-    // Kartları çift (bayrak + ülke adı) olarak diziye ekle
-    pairs.forEach(pair => {
-      cards.push({ value: pair.id, type: "flag", match: pair.match });
-      cards.push({ value: pair.match, type: "name", match: pair.match });
-    });
+        function startGame(level) {
+            gameBoard.innerHTML = "";
+            matchedCount = 0;
+            selected = [];
+            cards = [];
+            switch (level) {
+                case 3:
+                    currentTheme = 'easy';
+                    break;
+                case 4:
+                    currentTheme = 'medium';
+                    break;
+                case 5:
+                    currentTheme = 'hard';
+                    break;
+            }
+            document.body.className = currentTheme;
 
-    // Karıştır
-    cards = cards.sort(() => 0.5 - Math.random());
-
-    const gameBoard = document.getElementById("game");
-
-    let selected = [];
-    let matchedCount = 0;
-
-    cards.forEach((card, index) => {
-      const div = document.createElement("div");
-      div.classList.add("card");
-      div.dataset.match = card.match;
-      div.dataset.type = card.type;
-      div.innerText = "?";
-
-      div.addEventListener("click", function () {
-        if (div.classList.contains("matched") || selected.includes(div)) return;
-
-        div.innerText = card.value;
-        selected.push(div);
-
-        if (selected.length === 2) {
-          setTimeout(() => {
-            const [first, second] = selected;
-
-            if (
-              first.dataset.match === second.dataset.match &&
-              first.dataset.type !== second.dataset.type
-            ) {
-              first.classList.add("matched");
-              second.classList.add("matched");
-              matchedCount++;
-              if (matchedCount === pairs.length) {
-                alert("🎉 Tüm eşleşmeleri buldun! Tebrikler Kaşif!");
-              }
-            } else {
-              first.innerText = "?";
-              second.innerText = "?";
+            let pairsToUse = [];
+            switch (level) {
+                case 3:
+                    pairsToUse = allPairs.slice(0, 4);
+                    break;
+                case 4:
+                    pairsToUse = allPairs.slice(0, 6);
+                    break;
+                case 5:
+                    pairsToUse = allPairs;
+                    break;
             }
 
-            selected = [];
-          }, 600);
-        }
-      });
+            pairsToUse.forEach(pair => {
+                cards.push({ value: pair.id, type: "flag", match: pair.match });
+                cards.push({ value: pair.match, type: "name", match: pair.match });
+            });
 
-      gameBoard.appendChild(div);
-    });
-  </script>
+            cards = cards.sort(() => 0.5 - Math.random());
+
+            cards.forEach((card) => {
+                const div = document.createElement("div");
+                div.classList.add("card");
+                div.dataset.match = card.match;
+                div.dataset.type = card.type;
+                div.innerText = "?";
+
+                div.addEventListener("click", function () {
+                    if (div.classList.contains("matched") || selected.includes(div)) return;
+
+                    div.innerText = card.type === "flag" ? card.value : card.value;
+                    selected.push(div);
+
+                    if (selected.length === 2) {
+                        setTimeout(() => {
+                            const [first, second] = selected;
+
+                            if (
+                                first.dataset.match === second.dataset.match &&
+                                first.dataset.type !== second.dataset.type
+                            ) {
+                                first.classList.add("matched");
+                                second.classList.add("matched");
+                                matchedCount++;
+
+                                // Kutlama animasyonu
+                                first.classList.add("celebration");
+                                second.classList.add("celebration");
+
+                                if (matchedCount === pairsToUse.length) {
+                                    alert("🎉 Tüm eşleşmeleri buldun! Tebrikler Kaşif!");
+                                }
+                            } else {
+                                first.innerText = "?";
+                                second.innerText = "?";
+                            }
+
+                            selected = [];
+                        }, 600);
+                    }
+                });
+
+                gameBoard.appendChild(div);
+            });
+        }
+    </script>
 </body>
+
 </html>
