profil sayfası   güncelendi

--- a/profile.html
+++ b/profile.html
@@ -103,7 +103,7 @@
                 <li><a href="index.html">Ana Sayfa</a></li>
                 <li><a href="profile.html">Kaşif Profili</a></li>
                 <li><a href="equipment.html">Keşif Ekipmanları</a></li>
-                <li><a href="minigames.html">Mini Oyunlar</a></li>
+                <li><a href="games.html">Mini Oyunlar</a></li>
                 <li><a href="parental_control.html">Ebeveyn Kontrolü</a></li>
             </ul>
         </nav>
